--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "for": "nodemon ./js/08-for.js",
+    "switch": "nodemon ./js/07-switch.js",
     "if": "nodemon ./js/06-if.js",
     "array": "nodemon ./js/05-array.js",
     "boolean": "nodemon ./js/04-boolean.js",
