--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "arrow": "nodemon ./js/12-arrow.js",
+    "ciklai": "nodemon ./js/21-ciklai.js",
+    "arrow": "nodemon ./js/20-arrow.js",
     "arrayMethods": "nodemon ./js/19-arrayMethods.js",
     "stringMethods": "nodemon ./js/18-stringMethods.js",
     "object": "nodemon ./js/17-object.js",
