--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "classExtend": "nodemon ./js/25-classExtend.js",
     "class": "nodemon ./js/24-class.js",
     "ciklai": "nodemon ./js/21-ciklai.js",
     "arrow": "nodemon ./js/20-arrow.js",
